k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_6276f3da0e09
          command: ["/bin/sh", "-ec", "while :; do echo 'Hello World'; sleep 5 ; done"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
